🐛 Fix YouTube width on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -24,6 +24,7 @@
 iframe {
   display: block;
   margin: 0 auto;
+  max-width: 100%;
 }
 
 .partner-image {
